fix auth overflow

--- a/pages/auth/index.module.scss
+++ b/pages/auth/index.module.scss
@@ -1,7 +1,7 @@
 .authContainer {
     background: #cbcbcb;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -13,6 +13,7 @@
     height: 400px;
     border-radius: 15px;
     box-shadow: 0 4px 5px #b0b0b0;
+    display: flex;
 }
 
 .firstCol, .secondCol {
